--- a/index.html
+++ b/index.html
@@ -156,6 +156,56 @@
         <!-- Main Grid -->
         <main class="main-grid">
             <!-- Threat Overview -->
+            <!-- Accepted Tags & Formatting Guide for Threat Overview
+
+            To add or edit threat items, use the following structure:
+
+            <div class="threat-item">
+                <div class="threat-indicator [high|medium|low]"></div>
+                <div class="threat-content">
+                    <div class="threat-title">[Title of Threat]</div>
+                    <div class="threat-meta">[Short description or technique]</div>
+                    <div class="threat-footer">
+                        <div class="threat-tags">
+                            <span class="tag tag-apt">[APT Name]</span>
+                            <span class="tag tag-technique">[MITRE Technique]</span>
+                            <span class="tag tag-ioc">[Indicator]</span>
+                        </div>
+                        <div class="threat-time">[Date]</div>
+                    </div>
+                </div>
+            </div>
+
+            Threat Indicator Levels:
+                - high: Severe/critical threat
+                - medium: Moderate threat
+                - low: Low/minor threat
+
+            Available Tag Types (use as <span class="tag tag-...">Text</span>):
+                - tag-apt: Advanced Persistent Threat (e.g., UNC6148, LAZARUS)
+                - tag-cve: CVE identifier (e.g., CVE-2024-12345)
+                - tag-malware: Malware name/family (e.g., SystemBC)
+                - tag-exploit: Exploit name/type
+                - tag-technique: MITRE ATT&CK technique (e.g., T1041)
+                - tag-phishing: Phishing-related
+                - tag-ioc: Indicator of Compromise (e.g., SIM-SWAP, OVERSTEP)
+                - tag-saas: SaaS-related
+                - tag-sector: Targeted sector (e.g., Telecom, Finance)
+
+            Example Tags:
+                <span class="tag tag-apt">UNC6148</span>
+                <span class="tag tag-technique">T1190</span>
+                <span class="tag tag-ioc">OVERSTEP</span>
+                <span class="tag tag-malware">SystemBC</span>
+                <span class="tag tag-cve">CVE-2024-12345</span>
+                <span class="tag tag-phishing">PHISHING</span>
+                <span class="tag tag-sector">Telecom</span>
+
+            Date Format:
+                - Use short month and day (e.g., Jul 23)
+
+            You can freely mix and match tags as needed for each threat item.
+            -->
             <section class="grid-item threat-overview">
                 <div class="section-header">
                     <h2>Threat Overview</h2>
@@ -415,7 +465,7 @@
             <section class="grid-item sponsor-bento">
                 <div class="section-header sponsor-header">
                     <h2>Sponsors & Partners</h2>
-                    <button class="sponsor-</div>interest-btn" onclick="window.open('mailto:contact@wraven.org?subject=Sponsorship%20Interest','_blank')">Become a Sponsor</button>
+                    <button class="sponsor-interest-btn" onclick="window.open('mailto:contact@wraven.org?subject=Sponsorship%20Interest','_blank')">Become a Sponsor</button>
                 </div>
                 <div class="bento-box sponsors">
                     <div class="sponsor-list">
@@ -431,7 +481,7 @@
                             <img src="/imgs/HCBicon.png" alt="HCB - The Hack Foundation" class="sponsor-img">
                             <span class="sponsor-name">
                                 <span class="sponsor-title">HCB (Fiscal Sponsor)</span>
-                            </a>    <span class="sponsor-subtitle">The Hack Foundation "Hack Club"</span>
+                                <span class="sponsor-subtitle">The Hack Foundation "Hack Club"</span>
                             </span>
                         </a>
 
