--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                             <span>Intel Feed: Live</span>
                         </div>
                     </div>
+                    <a href="https://hcb.hackclub.com/donations/start/wraven" target="_blank" class="access-btn donate-btn">Donate</a>
                     <button class="access-btn" id="what-is-wraven-btn">What is WRAVEN?</button>
                 </div>
             </div>
@@ -506,6 +507,10 @@
                         <span>Connected from <code id="user-ip">Detecting...</code></span>
                     </div>
                     <div class="uptime">Uptime: 127d 14h 32m</div>
+                    <div class="nonprofit-info">
+                        <span>WRAVEN is a registered nonprofit</span><br>
+                        <span style="font-size: 0.92em; color: #aaa;">Fiscally sponsored by Hack Club, a 501(c)(3) nonprofit (EIN: 81-2908499)</span>
+                    </div>
                 </div>
                 <div class="footer-center">
                     <div class="contact">Contact: contact@wraven.org</div>
