--- a/index.html
+++ b/index.html
@@ -515,12 +515,11 @@
                     <div class="last-update">Last updated: Jul 7 2025 14:32 EST</div>
                 </div>
             </div>
+            <div class="nonprofit-info">
+                <span>WRAVEN is a registered nonprofit</span><br>
+                <span class="nonprofit-fiscal">Fiscally sponsored by Hack Club, a 501(c)(3) nonprofit (EIN: 81-2908499)</span>
+            </div>
         </footer>
-    </div>
-    <div class="nonprofit-info" style="width:100%;text-align:center;margin:12px 0 0 0;">
-        <span>WRAVEN is a registered nonprofit</span><br>
-        <span style="font-size: 0.92em; color: #aaa;">Fiscally sponsored by Hack Club, a 501(c)(3) nonprofit (EIN: 81-2908499)</span>
-    </div>
 
     <!-- Background Elements -->
     <div class="background-grid"></div>
