--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                 <div class="wraven-info">
                     <div class="info-section">
                         <h3>🛡️ WRAVEN's Mission at WMU</h3>
-                        <p>WRAVEN (Western Research Advisory for Vulnerabilities Exploits & Networks) is Western Michigan University's premier cybersecurity registered student organization. We're WMU's leading cybersecurity club, dedicated to advancing cybersecurity knowledge through hands-on research, competitive CTF participation, and real-world threat analysis at Western Michigan University.</p>
+                        <p>WRAVEN (Western Research Advisory for Vulnerabilities Exploits & Networks) is Western Michigan University's premier cybersecurity registered student organization. We're WMU's leading cybersecurity club & nonprofit, dedicated to advancing cybersecurity knowledge through hands-on research, competitive CTF participation, and real-world threat analysis at Western Michigan University.</p>
                     </div>
                     
                     <div class="info-section">
@@ -541,9 +541,10 @@
                     
                     <div class="info-section">
                         <h3>🔗 Join WMU's Premier Cybersecurity Organization</h3>
-                        <p>Whether you're a WMU student, researcher, or cybersecurity professional, there are many ways to engage with WRAVEN at Western Michigan University:</p>
+                        <p>Whether you're a WMU student, researcher, or cybersecurity professional, there are many ways to engage with WRAVEN:</p>
                         <div class="involvement-links">
                             <a href="https://experiencewmu.wmich.edu/organization/wraven" target="_blank">Join Our Organization</a>
+                            <a href="https://discord.gg/uYkvSU8DHy" target="_blank">Join Our Discord</a>
                             <a href="https://blog.wraven.org" target="_blank">Read Our Research</a>
                             <a href="mailto:contact@wraven.org">Contact Our Team</a>
                         </div>
