--- a/watchtower/index.html
+++ b/watchtower/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://public.wraven.org" />
+    <meta http-equiv="refresh" content="0; url=https://dashboard.wraven.org/public/dashboard/watchtower" />
     <title>Redirecting...</title>
   </head>
   <body>
-    <p>If you are not redirected, <a href="https://public.wraven.org">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://dashboard.wraven.org/public/dashboard/watchtower">click here</a>.</p>
   </body>
 </html>
