--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         <!-- SonicWall SMA OVERSTEP -->
                         <div class="threat-item">
                             <div class="threat-indicator high"></div>
-                            <div class="threat-content"></div>
+                            <div class="threat-content">
                                 <div class="threat-title">SonicWall SMA flaw and ongoing OVERSTEP activity</div>
                                 <div class="threat-meta">CVE-2025-40599 | Authenticated file upload on SMA 100; UNC6148 persists via OVERSTEP</div>
                                 <div class="threat-footer">
@@ -227,7 +227,7 @@
                                 <div class="threat-title">Lazarus spear-phishing targets defense contractors</div>
                                 <div class="threat-meta">T1566 | MalDoc lures deliver custom RAT via job-themed emails</div>
                                 <div class="threat-footer">
-                                    <div class="threat-tags"></div>
+                                    <div class="threat-tags">
                                         <span class="tag tag-apt">LAZARUS</span>
                                         <span class="tag tag-technique">T1566</span>
                                         <span class="tag tag-malware">RAT</span>
