--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <!-- Threat Overview -->
             <!-- Accepted Tags & Formatting Guide for Threat Overview
 
-            To add or edit threat items, use the following structure:
+            To add or edit threat items, please use the following structure:
 
             <div class="threat-item">
                 <div class="threat-indicator [high|medium|low]"></div>
